<resources>
    <string name="app_name">Bagels</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="impossible">Impossible?</string>

    <string name="instructions">I am thinking of a %1$d-digit number (it can start with 0). Try to guess what it is.\n
        P: One digit is correct but in the wrong position.\n
        F: One digit is correct and in the right position.\n
        B: No digit is correct.</string>

    <string name="one">1)</string>
    <string name="two">2)</string>
    <string name="three">3)</string>
    <string name="four">4)</string>
    <string name="five">5)</string>
    <string name="six">6)</string>
    <string name="seven">7)</string>
    <string name="eight">8)</string>
    <string name="nine">9)</string>
    <string name="ten">10)</string>

    <string name="key_zero">0</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_delete">X</string>
    <string name="key_check">\u2713</string>

    <string name="actual_number">The number was %1$s</string>

    <string name="correct">Correct!</string>

    <string name="exit_message">Exit the game?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="retry">Retry</string>
</resources>
