<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/easy_button"
        android:layout_width="190dp"
        android:padding="50dp"
        android:backgroundTint="@color/easyButton"
        android:text="@string/easy" />

    <Button
        android:id="@+id/medium_button"
        android:layout_width="190dp"
        android:padding="50dp"
        android:backgroundTint="@color/mediumButton"
        android:text="@string/medium" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="190dp"
        android:padding="50dp"
        android:backgroundTint="@color/hardButton"
        android:text="@string/hard" />

    <Button
        android:id="@+id/impossible_button"
        android:layout_width="190dp"
        android:padding="50dp"
        android:backgroundTint="@color/impossibleButton"
        android:text="@string/impossible" />

</GridLayout>